--- a/crates/k8s-version/Cargo.toml
+++ b/crates/k8s-version/Cargo.toml
@@ -23,3 +23,6 @@ quote.workspace = true
 proc-macro2.workspace = true
 serde_yaml.workspace = true
 syn.workspace = true
+
+[lints]
+workspace = true
