--- a/crates/stackable-operator/crds/DummyCluster.yaml
+++ b/crates/stackable-operator/crds/DummyCluster.yaml
@@ -76,11 +76,6 @@ spec:
                 description: A validated domain name type conforming to RFC 1123, so e.g. not an IP address
                 type: string
               gitSync:
-                anyOf:
-                - required:
-                  - credentialsSecret
-                - required:
-                  - sshSecret
                 properties:
                   branch:
                     default: main
@@ -89,16 +84,34 @@ spec:
 
                       Since git-sync v4.x.x this field is mapped to the flag `--ref`.
                     type: string
-                  credentialsSecret:
-                    description: |-
-                      The name of the Secret used to access the repository if it is not public.
+                  credentials:
+                    anyOf:
+                    - required:
+                      - basicAuthSecretName
+                    - required:
+                      - sshPrivateKeySecretName
+                    description: An optional secret used for git access.
+                    nullable: true
+                    properties:
+                      basicAuthSecretName:
+                        description: |-
+                          The name of the Secret used to access the repository via Basic Authentication if it is not public.
 
-                      The referenced Secret must include two fields: `user` and `password`.
-                      The `password` field can either be an actual password (not recommended) or a GitHub token,
-                      as described in the git-sync [documentation].
+                          The referenced Secret must include two fields: `user` and `password`.
+                          The `password` field can either be an actual password (not recommended) or a GitHub token,
+                          as described in the git-sync [documentation].
 
-                      [documentation]: https://github.com/kubernetes/git-sync/tree/v4.2.4?tab=readme-ov-file#manual
-                    type: string
+                          [documentation]: https://github.com/kubernetes/git-sync/tree/v4.2.4?tab=readme-ov-file#manual
+                        type: string
+                      sshPrivateKeySecretName:
+                        description: |-
+                          The name of the Secret used for SSH access to the repository.
+
+                          The referenced Secret must include two fields: `key` and `knownHosts`.
+
+                          [documentation]: https://github.com/kubernetes/git-sync/tree/v4.2.4?tab=readme-ov-file#manual
+                        type: string
+                    type: object
                   depth:
                     default: 1
                     description: The depth of syncing, i.e. the number of commits to clone; defaults to 1.
@@ -128,14 +141,6 @@ spec:
                   repo:
                     description: 'The git repository URL that will be cloned, for example: `https://github.com/stackabletech/airflow-operator` or `ssh://git@github.com:stackable-airflow/dags.git`.'
                     format: uri
-                    type: string
-                  sshSecret:
-                    description: |-
-                      The name of the Secret used for SSH access to the repository.
-
-                      The referenced Secret must include two fields: `key` and `knownHosts`.
-
-                      [documentation]: https://github.com/kubernetes/git-sync/tree/v4.2.4?tab=readme-ov-file#manual
                     type: string
                   wait:
                     default: 20s
