--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -4,3 +4,4 @@ imports_granularity = "Crate"
 group_imports = "StdExternalCrate"
 reorder_impl_items = true
 use_field_init_shorthand = true
+format_code_in_doc_comments = true
