--- a/crates/stackable-operator/crds/AuthenticationClass.yaml
+++ b/crates/stackable-operator/crds/AuthenticationClass.yaml
@@ -246,6 +246,7 @@ spec:
                           intended to be used (via the `.well-known` discovery).
                         enum:
                         - Keycloak
+                        - null
                         nullable: true
                         type: string
                       rootPath:
