Update CRD preview

--- a/crates/stackable-operator/crds/Listener.yaml
+++ b/crates/stackable-operator/crds/Listener.yaml
@@ -41,6 +41,20 @@ spec:
                 default: {}
                 description: Extra labels that the Pods must match in order to be exposed. They must _also_ still have a Volume referring to the Listener.
                 type: object
+              objectOverrides:
+                default: []
+                description: |-
+                  A list of generic Kubernetes objects, which are merged into the objects that the operator
+                  creates.
+
+                  List entries are arbitrary YAML objects, which need to be valid Kubernetes objects.
+
+                  Read the [Object overrides documentation](https://docs.stackable.tech/home/nightly/concepts/overrides#object-overrides)
+                  for more information.
+                items:
+                  type: object
+                  x-kubernetes-preserve-unknown-fields: true
+                type: array
               ports:
                 description: Ports that should be exposed.
                 items:
