--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,7 @@ json-patch = "4.0.0"
 k8s-openapi = { version = "0.27.0", default-features = false, features = ["schemars", "v1_35"] }
 # We use rustls instead of openssl for easier portability, e.g. so that we can build stackablectl without the need to vendor (build from source) openssl
 # We use ring instead of aws-lc-rs, as this currently fails to build in "make run-dev"
-# We pin the kube version, as we use a patch for 2.0.1
-# kube = { version = "3.0.1", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "admission", "rustls-tls", "ring"] }
+# We need a few schema fixes in kube, that went into main, but are not released yet
 kube = { git = "https://github.com/kube-rs/kube-rs", rev = "fe69cc486ff8e62a7da61d64ec3ebbd9e64c43b5", version = "=3.0.1", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "admission", "rustls-tls", "ring"] }
 opentelemetry = "0.31.0"
 opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
