Allow https://github.com/kube-rs/kube-rs Git repo

--- a/deny.toml
+++ b/deny.toml
@@ -75,6 +75,9 @@ license-files = [{ path = "LICENSE", hash = 0x001c7e6c }]
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
+allow-git = [
+    "https://github.com/kube-rs/kube-rs",
+]
 
 [sources.allow-org]
 github = ["stackabletech"]
